styles/main.css
* {
  box-sizing: border-box;
}

body {
  margin:0;
  padding:0;
  color: #000;
  background: #EBFEFF;
  font-size: 100%;
  text-rendering: optimizeLegibility;
  background-size: 115vmax;

  font-family: Verdana, Geneva, sans-serif;
}

.main_page {
  background-image: url("../images/background_opt.jpg");
  background-blend-mode: hard-light;
  background-color: rgba(128, 128, 128, 0.9);
}

.bio {
  text-align: center;
}

.download_box {
  padding: 20px 0;
  margin: auto;
  width: 20vw;
  border: 2px solid #000000;
  border-style: solid;
  color: #386DE8;
}

.download_box a {
  text-align: center;
  color: #000000;
  display: block;
}

.gallery {
  margin: auto;
  position: relative;

  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  justify-content: center
  align-items: center;

  font-family: Helvetica, Arial, sans-serif;
}

.game_page > .game_information {
  position: relative;
  grid-area: info;
  padding: 5%;
  width: 100%;
  text-align: center;
}

.game_description {
  width: 100%;
  padding: 0;
  border: 5px solid #abcdef;
}

.game_information p {
  padding: auto;
}

.game_page > .gallery {
  grid-area: gall;
}

.game_page {
  display: grid;
  grid-template-columns: repeat(7, 1fr);
  grid-auto-rows: minmax(200px, auto);
  grid-template-areas: 
    "info info info imag imag imag imag"
    "info info info imag imag imag imag"
    "gall gall gall gall gall gall gall";
  padding: 5px;
}

.game_image {
  position: relative;
  overflow: hidden;
  padding-top: 56.25%;
  max-width: 100%;
  max-height: 100%;
  width: 100%;

  grid-area: imag;
  margin: auto;
}

.game_video {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  border: 0;
}

@media only screen and (max-width: 600px) {
  .game_page {
    grid-template-areas: none;
    grid-template-columns: 100vw;
    grid-auto-rows: minmax(100%, 100vmin);
    grid-template-areas:
      "info"
      "imag" 
      "gall";
  }
}

.gallery_element {
  max-width: 400px;
  max-height: auto;
  position: relative;
  text-align: center;
  color: white;

  padding: 4px;
}

.gallery_element img {
  position: relative; 
  vertical-align: middle;

  border: 5px solid #AAAAAA;
  border-radius: 5px;

  display: block;
  height: auto;
  width: 100%;
}

.game_cover_textbox {
  position: absolute;

  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);

  padding: 8px;

  pointer-events: none;

  background-color: rgba(55, 55, 55, 0.7);
}

.game_cover_title {
  white-space: nowrap;
  font-size: 20pt;
}

/* avatar */
.avatar {
  margin: auto;
  width: 80vmin;
  height: 80vmin;
  position: relative;
  overflow: hidden;
  border-radius: 50%;
  object-fit: scale-down;
  border: 1vmin solid #000000;
  border-style: solid;
}
 
.avatar img {
  display: block;
  /*margin-left: -10%; //centers the image */
  max-width: 100vmin;
  max-height: 100vmin;
  height: auto;
  width: 100%;
}

/* navbar */
.navbar {
  background-color: #33300F;
  overflow: hidden;
  font-family: Verdana, Geneva, sans-serif;
}

.navbar a {
  float: left;
  display: block;
  color: #f3f3f3;
  text-align: center;
  padding: 10px 16px;
  text-decoration: none;
  font-size: 16px;
}

.navbar a:hover {
  background-color: #ddd;
  color: black;
}

.navbar .active {
  background-color: #4DA4D4;
  color: white;
}

